<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RonilesApp</string>

    <!-- Titles -->
    <string name="create_task">Create Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="category">Category</string>

    <!-- Buttons -->
    <string name="add_category">Add Category</string>
    <string name="save_task">Save Task</string>
    <string name="back_to_tasks">Back To Tasks</string>

    <!-- Spinner prompt -->
    <string name="choose_category">Choose Category</string>
</resources>

